added links for websites

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-12">
-                        <a class="item">
+                        <a href="http://webshop.great-site.net" class="item">
                             <i class="fa fa-globe" id="icon"></i>
                             <span class="text">E-Commerce Website</span>
                         </a>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-12">
-                        <a class="item">
+                        <a href="http://livechat.great-site.net" class="item">
                             <i class="fa fa-globe" id="icon"></i>
                             <span class="text">Chatting Website</span>
                         </a>
