--- a/index.html
+++ b/index.html
@@ -23,50 +23,80 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="navbar">
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <div class="form-group mb-0">
-                    <div class="col-md-12 text-center">
-                        <img src="image.jpg">
-                    </div>
-                </div>
-                <div class="form-group mb-4">
-                    <div class="col-md-12 main-title">
-                        Bahaa Yassine
-                    </div>
-                    <div class="col-md-12 sub-title">
-                        Web Developer
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <a href="https://github.com/BahaaY" class="item">
-                            <i class="fa fa-github" id="icon"></i>
-                            <span class="text">GitHub</span>
+            <div class="col-md-6 header">
+                <div class="form-group p-0 m-0">
+                    <div class="row">
+                        <a href="about-me" class="col header-item">
+                            About Me
                         </a>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <a href="http://webshop.great-site.net" class="item">
-                            <i class="fa fa-globe" id="icon"></i>
-                            <span class="text">E-Commerce Website</span>
+                        <a href="" class="col header-item">
+                            Certifications
                         </a>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <a href="http://livechat.great-site.net" class="item">
-                            <i class="fa fa-globe" id="icon"></i>
-                            <span class="text">Chatting Website</span>
+                        <a href="#projects" class="col header-item">
+                            Projects
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-md-3"></div>
         </div>
+    </div>
+    <div class="container-fluid" id="container">
+        <section id="about-me">
+            <div class="row">
+                <div class="col-md-12">
+                  
+                </div>
+            </div>
+        </section>
+        <section id="projects">
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group mb-0">
+                        <div class="col-md-12 text-center">
+                            <img src="image.jpg">
+                        </div>
+                    </div>
+                    <div class="form-group mb-4">
+                        <div class="col-md-12 main-title">
+                            Bahaa Yassine
+                        </div>
+                        <div class="col-md-12 sub-title">
+                            Web Developer
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <a href="https://github.com/BahaaY" class="item">
+                                <i class="fa fa-github" id="icon"></i>
+                                <span class="text">GitHub</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <a href="http://webshop.great-site.net" class="item">
+                                <i class="fa fa-globe" id="icon"></i>
+                                <span class="text">E-Commerce Website</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <a href="http://livechat.great-site.net" class="item">
+                                <i class="fa fa-globe" id="icon"></i>
+                                <span class="text">Chatting Website</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
