--- a/index.html
+++ b/index.html
@@ -47,50 +47,79 @@
     <div class="container-fluid" id="container">
         <section id="about-me">
             <div class="row">
-                <div class="col-md-12">
-                  
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group text-center">
+                                    <span class="h3">
+                                        ABOUT ME
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p>Hi there, I’m <strong>Bahaa Yassine</strong>.</p>
+                                <p>
+                                    My passion for computer science was from my childhood but ignited more in covid time.so i moved towards bca in bca under my college 
+                                    i have attended many workshops of python and java and many more and my hooby is to write a poems i published my first book dil se kalam
+                                    tak which is available on on amazon and flipkart. 
+                                </p>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <img src="image.jpg">
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div class="col-md-3"></div>
             </div>
         </section>
         <section id="projects">
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <div class="form-group mb-0">
-                        <div class="col-md-12 text-center">
-                            <img src="image.jpg">
-                        </div>
-                    </div>
-                    <div class="form-group mb-4">
-                        <div class="col-md-12 main-title">
-                            Bahaa Yassine
-                        </div>
-                        <div class="col-md-12 sub-title">
-                            Web Developer
-                        </div>
-                    </div>
                     <div class="form-group">
-                        <div class="col-md-12">
-                            <a href="https://github.com/BahaaY" class="item">
-                                <i class="fa fa-github" id="icon"></i>
-                                <span class="text">GitHub</span>
-                            </a>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group text-center">
+                                    <span class="h3">
+                                        Projects
+                                    </span>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <a href="http://webshop.great-site.net" class="item">
-                                <i class="fa fa-globe" id="icon"></i>
-                                <span class="text">E-Commerce Website</span>
-                            </a>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <a href="https://github.com/BahaaY" class="project">
+                                        <i class="fa fa-github" id="icon"></i>
+                                        <span class="text">GitHub</span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <a href="http://livechat.great-site.net" class="item">
-                                <i class="fa fa-globe" id="icon"></i>
-                                <span class="text">Chatting Website</span>
-                            </a>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <a href="http://webshop.great-site.net" class="project">
+                                        <i class="fa fa-globe" id="icon"></i>
+                                        <span class="text">E-Commerce Website</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <a href="http://livechat.great-site.net" class="project">
+                                        <i class="fa fa-globe" id="icon"></i>
+                                        <span class="text">Chatting Website</span>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
