--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col-md-6 header">
                 <div class="form-group p-0 m-0">
                     <div class="row">
-                        <a href="about-me" class="col header-item">
+                        <a href="#about-me" class="col header-item">
                             About Me
                         </a>
                         <a href="" class="col header-item">
@@ -44,6 +44,7 @@
             <div class="col-md-3"></div>
         </div>
     </div>
+    <div class="gap"></div>
     <div class="container-fluid" id="container">
         <section id="about-me">
             <div class="row">
@@ -59,6 +60,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="gap"></div>
                         <div class="row">
                             <div class="col-md-6">
                                 <p>Hi there, I’m <strong>Bahaa Yassine</strong>.</p>
@@ -68,7 +70,7 @@
                                     tak which is available on on amazon and flipkart. 
                                 </p>
                             </div>
-                            <div class="col-md-6 text-center">
+                            <div class="col-md-6 text-right">
                                 <img src="image.jpg">
                             </div>
                         </div>
@@ -77,11 +79,13 @@
                 <div class="col-md-3"></div>
             </div>
         </section>
+        <div class="gap"></div>
         <section id="projects">
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="form-group">
+                        <div class="gap"></div>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group text-center">
@@ -91,6 +95,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="gap"></div>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
