--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                             <div class="col-md-6">
                                 <p>Hi there, I’m <strong>Bahaa Yassine</strong>.</p>
                                 <p>
-                                    My passion for computer science was from my childhood but ignited more in covid time.so i moved towards bca in bca under my college 
-                                    i have attended many workshops of python and java and many more and my hooby is to write a poems i published my first book dil se kalam
-                                    tak which is available on on amazon and flipkart. 
+                                    Proficient in a variety of programming languages with a focus on web development, 
+                                    including HTML, PHP, JavaScript, CSS, Ajax, jQuery, and Laravel. Additionally, 
+                                    possess expertise in mobile app development using Java.
                                 </p>
                             </div>
                             <div class="col-md-6 text-right">
