added courses section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <div class="col header-item active" id="btn_about_me">
                             About Me
                         </div>
+                        <div class="col header-item" id="btn_courses">
+                            Courses
+                        </div>
                         <div class="col header-item" id="btn_certifications">
                             Certifications
                         </div>
@@ -74,6 +77,55 @@
                             </div>
                             <div class="col-md-6 text-right">
                                 <img src="image.jpg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+        </section>
+        <div class="gap"></div>
+        <section id="section-courses">
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group text-center">
+                                    <span class="h3">
+                                        Courses
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gap"></div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <ul>
+                                        <li>
+                                            Laravel
+                                            <p>
+                                                Learn to use routes, controllers, views, middleware, sessions, models, migrations,
+                                                SQL queries and much more to make advanced applications.
+                                            </p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <ul>
+                                        <li>
+                                            PHP
+                                            <p>
+                                                Learn to use object oriented PHP, functions, sessions, cookies, authentication, Jquery, Ajax,
+                                                Bootstrap and much more with practical exercices & projetcs.
+                                            </p>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
