--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                     possess expertise in mobile app development using Java.
                                 </p>
                             </div>
-                            <div class="col-md-6 text-right">
+                            <div class="col-md-6 text-center">
                                 <img src="image.jpg">
                             </div>
                         </div>
