--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Bahaa Yassine - Portfolio</title>
 
     <link href="resources/images/portfolio-icon.svg" rel="icon">
     <link href="resources/images/portfolio-icon.svg" rel="apple-touch-icon">
