--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="container-fluid" id="container-sections">
-        <section id="section-about-me">
+        <section id="section-about-me" class="section">
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
@@ -78,9 +78,13 @@
                             <div class="col-md-6">
                                 <p>Hi there, I’m <strong>Bahaa Yassine</strong>.</p>
                                 <p>
-                                    Proficient in a variety of programming languages with a focus on web development, 
-                                    including HTML, PHP, JavaScript, CSS, Ajax, jQuery, and Laravel. Additionally, 
-                                    possess expertise in mobile app development using Java.
+                                    I am a skilled developer with expertise in a variety of programming languages. 
+                                    For web development, I am proficient in HTML, CSS, JavaScript, jQuery, PHP, Ajax, JSON and Laravel, Bootstrap Frameworks.
+                                    In addition of multiple databases as MYSQL, Microsoft SQL SERVER, Firebase and SQlite. 
+                                    <br>
+                                    In the realm of mobile app development, I have a strong command of Java. My knowledge 
+                                    and experience in these languages enable me to create dynamic web and mobile applications with a 
+                                    focus on user-friendly design and functionality.
                                 </p>
                             </div>
                             <div class="col-md-6 text-center">
@@ -92,7 +96,7 @@
                 <div class="col-md-3"></div>
             </div>
         </section>
-        <section id="section-courses">
+        <section id="section-courses" class="section">
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
@@ -143,7 +147,7 @@
                 <div class="col-md-3"></div>
             </div>
         </section>
-        <section id="section-certifications">
+        <section id="section-certifications" class="section">
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
@@ -174,7 +178,7 @@
                 <div class="col-md-3"></div>
             </div>
         </section>
-        <section id="section-projects">
+        <section id="section-projects" class="section">
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
