--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="container-fluid" id="container-sections">
         <section id="section-about-me" class="section">
-            <div class="row">
+            <div class="row p-0 m-0">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -97,7 +97,7 @@
             </div>
         </section>
         <section id="section-courses" class="section">
-            <div class="row">
+            <div class="row p-0 m-0">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -148,7 +148,7 @@
             </div>
         </section>
         <section id="section-certifications" class="section">
-            <div class="row">
+            <div class="row p-0 m-0">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="form-group">
@@ -179,7 +179,7 @@
             </div>
         </section>
         <section id="section-projects" class="section">
-            <div class="row">
+            <div class="row p-0 m-0">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div class="form-group">
