--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <body>
     <div class="container" id="device-navbar">
         <div class="row">
-            <div class="col-md-12" onclick="open_device_menu();">
+            <div class="col-md-12">
                 <div class="form-group text-right">
-                    <i class="fa fa-solid fa-bars" id="bars-icon"></i>
+                    <i class="fa fa-solid fa-bars" id="bars-icon" onclick="open_device_menu();"></i>
                 </div>
             </div>
         </div>
