--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="container" id="navbar">
+    <div class="container-fluid" id="navbar">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6 header">
